Updated overflow bug on about section

--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
 }
+body
+{
+  overflow-x: clip;
+}
 .toggle
 {
   position: fixed;
